app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: default
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
